--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,24 @@ services:
       - -c
       - max_replication_slots=10
 
+  db-wal2json:
+    build:
+      context: ./postgres-wal2json
+    restart: no
+    shm_size: 128mb
+    environment:
+      POSTGRES_PASSWORD: pass
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - 5434:5432
+    command:
+      - -c
+      - wal_level=logical
+      - -c
+      - max_wal_senders=10
+      - -c
+      - max_replication_slots=10
+
   adminer:
     image: adminer
     restart: no
