--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,23 @@ services:
       - max_replication_slots=10
     stop_grace_period: 2s
 
-#  kafka:
-#    image: 'bitnami/kafka:3.5'
-#    environment:
-#      - KAFKA_CFG_NODE_ID=0
-#      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-#      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-#      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-#      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-#      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-#    ports:
-#      - 9092:9092
+  kafka:
+    image: 'bitnami/kafka:3.5'
+    environment:
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+    ports:
+      - 9092:9092
+      - 9094:9094
+
+  kowl:
+    image: docker.redpanda.com/redpandadata/console:latest
+    environment:
+      - KAFKA_BROKERS=kafka:9092
+    ports:
+      - 8080:8080
