--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   db-wal2json:
     build:
-      context: ./postgres-wal2json
+      context: tests/docker/postgres-wal2json
     restart: no
     shm_size: 128mb
     environment:
