Add docker container to simulate db activity

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - -c
       - max_replication_slots=10
     stop_grace_period: 2s
+    # network_mode: host
 
   kafka:
     image: 'bitnami/kafka:3.5'
@@ -33,6 +34,7 @@ services:
     ports:
       - 9092:9092
       - 9094:9094
+    # network_mode: host
 
   kowl:
     image: docker.redpanda.com/redpandadata/console:latest
@@ -40,3 +42,4 @@ services:
       - KAFKA_BROKERS=kafka:9092
     ports:
       - 8080:8080
+    # network_mode: host
