Tox: run tests on PostgreSql 15 and 16

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 env_list =
-    py311
+    py{311}-pg{15,16}
 minversion = 4.9.0
 
 [testenv]
@@ -11,7 +11,25 @@ deps =
     pytest>=6
     -r reqs/requirements-prod.txt
     -r reqs/requirements-dev.txt
-commands =
-    env EXPLORATION_TEST=1 pytest {tty:--color=yes} {posargs}
 allowlist_externals =
     env
+    docker
+    nc
+    sleep
+    bash
+commands =
+    bash -c 'docker compose --project-name popyka-tox --file docker-compose-tox.yml up --build ${DOCKER_COMPOSE_SERVICE} -d'
+    bash -c 'while ! nc -zv localhost ${OVERRIDE_PORT} ; do sleep 0.5 ; done'
+    pytest {tty:--color=yes} {posargs}
+
+[testenv:py311-pg15]
+set_env =
+    EXPLORATION_TEST=1
+    OVERRIDE_PORT=54015
+    DOCKER_COMPOSE_SERVICE=pg15
+
+[testenv:py311-pg16]
+set_env =
+    EXPLORATION_TEST=1
+    OVERRIDE_PORT=54016
+    DOCKER_COMPOSE_SERVICE=pg16
