Use method to generate random string compatible with PostgreSql 12

--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,8 @@ allowlist_externals =
     sleep
     bash
 commands =
-    bash -c 'docker compose --project-name popyka-tox --file docker-compose-tox.yml up --build ${DOCKER_COMPOSE_SERVICE} -d'
-    bash -c 'while ! nc -zv localhost ${OVERRIDE_PORT} ; do sleep 0.5 ; done'
+    # bash -c 'docker compose --project-name popyka-tox --file docker-compose-tox.yml up --build ${DOCKER_COMPOSE_SERVICE} -d'
+    # bash -c 'while ! nc -zv localhost ${OVERRIDE_PORT} ; do sleep 0.5 ; done'
     pytest {tty:--color=yes} {posargs}
 
 [testenv:py311-pg12]
