--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 env_list =
-    py{311}-pg{12,13,14,15,16}
+    py{311,312}-pg{12,13,14,15,16}
 minversion = 4.9.0
 
 [testenv]
@@ -21,33 +21,10 @@ commands =
     # bash -c 'docker compose --project-name popyka-tox --file docker-compose-tox.yml up --build ${DOCKER_COMPOSE_SERVICE} -d'
     # bash -c 'while ! nc -zv localhost ${OVERRIDE_PORT} ; do sleep 0.5 ; done'
     pytest {tty:--color=yes} {posargs}
-
-[testenv:py311-pg12]
 set_env =
     EXPLORATION_TEST=1
-    OVERRIDE_PORT=54012
-    DOCKER_COMPOSE_SERVICE=pg12
-
-[testenv:py311-pg13]
-set_env =
-    EXPLORATION_TEST=1
-    OVERRIDE_PORT=54013
-    DOCKER_COMPOSE_SERVICE=pg13
-
-[testenv:py311-pg14]
-set_env =
-    EXPLORATION_TEST=1
-    OVERRIDE_PORT=54014
-    DOCKER_COMPOSE_SERVICE=pg14
-
-[testenv:py311-pg15]
-set_env =
-    EXPLORATION_TEST=1
-    OVERRIDE_PORT=54015
-    DOCKER_COMPOSE_SERVICE=pg15
-
-[testenv:py311-pg16]
-set_env =
-    EXPLORATION_TEST=1
-    OVERRIDE_PORT=54016
-    DOCKER_COMPOSE_SERVICE=pg16
+    py{311,312}-pg{12}: OVERRIDE_PORT=54012
+    py{311,312}-pg{13}: OVERRIDE_PORT=54013
+    py{311,312}-pg{14}: OVERRIDE_PORT=54014
+    py{311,312}-pg{15}: OVERRIDE_PORT=54015
+    py{311,312}-pg{16}: OVERRIDE_PORT=54016
