Tox: add Python 3.10, 3.11. Update README

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
+# Maintained Python versions: 3.8 to 3.12
+# Maintained PostgreSql versions: 12 to 16
+# - Python 3.8 not supported for now: need to fix problem with dependencies
+# - Python 3.9 not supported for now: need to fix problem with dependencies
 env_list =
-    py{311,312}-pg{12,13,14,15,16}
+    py{310,311,312}-pg{12,13,14,15,16}
 minversion = 4.9.0
 
 [testenv]
@@ -23,8 +27,8 @@ commands =
     pytest {tty:--color=yes} {posargs}
 set_env =
     EXPLORATION_TEST=1
-    py{311,312}-pg{12}: OVERRIDE_PORT=54012
-    py{311,312}-pg{13}: OVERRIDE_PORT=54013
-    py{311,312}-pg{14}: OVERRIDE_PORT=54014
-    py{311,312}-pg{15}: OVERRIDE_PORT=54015
-    py{311,312}-pg{16}: OVERRIDE_PORT=54016
+    py{310,311,312}-pg{12}: OVERRIDE_PORT=54012
+    py{310,311,312}-pg{13}: OVERRIDE_PORT=54013
+    py{310,311,312}-pg{14}: OVERRIDE_PORT=54014
+    py{310,311,312}-pg{15}: OVERRIDE_PORT=54015
+    py{310,311,312}-pg{16}: OVERRIDE_PORT=54016
