--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [build-system]
 # https://github.com/ofek/hatch-showcase/blob/master/pyproject.toml
+# $ python3 -m build
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
@@ -34,6 +35,16 @@ classifiers = [
 
 [tool.hatch.version]
 path = "popyka/__version__.py"
+
+[tool.hatch.build.targets.sdist]
+exclude = [
+  "/docs",
+  "/reqs",
+  "/tests",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["popyka"]
 
 [tool.isort]
 profile = "black"
