--- a/reqs/requirements-dev.txt
+++ b/reqs/requirements-dev.txt
@@ -4,26 +4,62 @@
 #
 #    pip-compile --output-file=reqs/requirements-dev.txt reqs/requirements-dev.in
 #
+anyio==4.3.0
+    # via httpx
 asttokens==2.4.1
     # via stack-data
+backports-tarfile==1.0.0
+    # via jaraco-context
 black==24.3.0
     # via -r reqs/requirements-dev.in
+certifi==2024.2.2
+    # via
+    #   httpcore
+    #   httpx
+cffi==1.16.0
+    # via cryptography
 cfgv==3.4.0
     # via pre-commit
 click==8.1.7
-    # via black
+    # via
+    #   black
+    #   hatch
+    #   userpath
+cryptography==42.0.5
+    # via secretstorage
 decorator==5.1.1
     # via
     #   ipdb
     #   ipython
 distlib==0.3.8
     # via virtualenv
+editables==0.5
+    # via hatchling
 executing==2.0.1
     # via stack-data
 filelock==3.13.3
     # via virtualenv
+h11==0.14.0
+    # via httpcore
+hatch==1.9.4
+    # via -r reqs/requirements-dev.in
+hatchling==1.21.1
+    # via hatch
+httpcore==1.0.5
+    # via httpx
+httpx==0.27.0
+    # via hatch
+hyperlink==21.0.0
+    # via hatch
 identify==2.5.35
     # via pre-commit
+idna==3.6
+    # via
+    #   anyio
+    #   httpx
+    #   hyperlink
+importlib-metadata==7.1.0
+    # via keyring
 iniconfig==2.0.0
     # via pytest
 ipdb==0.13.13
@@ -32,10 +68,30 @@ ipython==8.23.0
     # via ipdb
 isort==5.13.2
     # via -r reqs/requirements-dev.in
+jaraco-classes==3.4.0
+    # via keyring
+jaraco-context==5.3.0
+    # via keyring
+jaraco-functools==4.0.0
+    # via keyring
 jedi==0.19.1
     # via ipython
+jeepney==0.8.0
+    # via
+    #   keyring
+    #   secretstorage
+keyring==25.1.0
+    # via hatch
+markdown-it-py==3.0.0
+    # via rich
 matplotlib-inline==0.1.6
     # via ipython
+mdurl==0.1.2
+    # via markdown-it-py
+more-itertools==10.2.0
+    # via
+    #   jaraco-classes
+    #   jaraco-functools
 mypy-extensions==1.0.0
     # via black
 nodeenv==1.8.0
@@ -43,19 +99,28 @@ nodeenv==1.8.0
 packaging==24.0
     # via
     #   black
+    #   hatch
+    #   hatchling
     #   pytest
 parso==0.8.4
     # via jedi
 pathspec==0.12.1
-    # via black
+    # via
+    #   black
+    #   hatchling
 pexpect==4.9.0
-    # via ipython
+    # via
+    #   hatch
+    #   ipython
 platformdirs==4.2.0
     # via
     #   black
+    #   hatch
     #   virtualenv
 pluggy==1.4.0
-    # via pytest
+    # via
+    #   hatchling
+    #   pytest
 pre-commit==3.7.0
     # via -r reqs/requirements-dev.in
 prompt-toolkit==3.0.43
@@ -64,26 +129,54 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
+pycparser==2.22
+    # via cffi
 pygments==2.17.2
-    # via ipython
+    # via
+    #   ipython
+    #   rich
 pytest==8.1.1
     # via -r reqs/requirements-dev.in
 pyyaml==6.0.1
     # via pre-commit
+rich==13.7.1
+    # via hatch
+secretstorage==3.3.3
+    # via keyring
+shellingham==1.5.4
+    # via hatch
 six==1.16.0
     # via asttokens
+sniffio==1.3.1
+    # via
+    #   anyio
+    #   httpx
 stack-data==0.6.3
     # via ipython
+tomli-w==1.0.0
+    # via hatch
+tomlkit==0.12.4
+    # via hatch
 traitlets==5.14.2
     # via
     #   ipython
     #   matplotlib-inline
+trove-classifiers==2024.3.25
+    # via hatchling
 typing-extensions==4.11.0
     # via ipython
+userpath==1.9.2
+    # via hatch
 virtualenv==20.25.1
-    # via pre-commit
+    # via
+    #   hatch
+    #   pre-commit
 wcwidth==0.2.13
     # via prompt-toolkit
+zipp==3.18.1
+    # via importlib-metadata
+zstandard==0.22.0
+    # via hatch
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
