--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
 version: '3.9'
 
 services:
-  db-wal2json:
+  pg12:
     build:
-      context: tests/docker/postgres16-wal2json
+      args:
+        HTTP_PROXY: ${http_proxy}
+        HTTPS_PROXY: ${https_proxy}
+      context: tests/docker/postgres12-wal2json
     restart: no
     shm_size: 128mb
     environment:
       POSTGRES_PASSWORD: pass
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - 5434:5432
+      - 54012:5432
     command:
       - -c
       - wal_level=logical
@@ -19,6 +22,127 @@ services:
       - -c
       - max_replication_slots=10
     stop_grace_period: 2s
+
+  pg13:
+    build:
+      args:
+        HTTP_PROXY: ${http_proxy}
+        HTTPS_PROXY: ${https_proxy}
+      context: tests/docker/postgres13-wal2json
+    restart: no
+    shm_size: 128mb
+    environment:
+      POSTGRES_PASSWORD: pass
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - 54013:5432
+    command:
+      - -c
+      - wal_level=logical
+      - -c
+      - max_wal_senders=10
+      - -c
+      - max_replication_slots=10
+    stop_grace_period: 2s
+
+  pg14:
+    build:
+      args:
+        HTTP_PROXY: ${http_proxy}
+        HTTPS_PROXY: ${https_proxy}
+      context: tests/docker/postgres14-wal2json
+    restart: no
+    shm_size: 128mb
+    environment:
+      POSTGRES_PASSWORD: pass
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - 54014:5432
+    command:
+      - -c
+      - wal_level=logical
+      - -c
+      - max_wal_senders=10
+      - -c
+      - max_replication_slots=10
+    stop_grace_period: 2s
+
+  pg15:
+    build:
+      args:
+        HTTP_PROXY: ${http_proxy}
+        HTTPS_PROXY: ${https_proxy}
+      context: tests/docker/postgres15-wal2json
+    restart: no
+    shm_size: 128mb
+    environment:
+      POSTGRES_PASSWORD: pass
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - 54015:5432
+    command:
+      - -c
+      - wal_level=logical
+      - -c
+      - max_wal_senders=10
+      - -c
+      - max_replication_slots=10
+    stop_grace_period: 2s
+
+  pg16:
+    build:
+      args:
+        HTTP_PROXY: ${http_proxy}
+        HTTPS_PROXY: ${https_proxy}
+      context: tests/docker/postgres16-wal2json
+    restart: no
+    shm_size: 128mb
+    environment:
+      POSTGRES_PASSWORD: pass
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - 54016:5432
+    command:
+      - -c
+      - wal_level=logical
+      - -c
+      - max_wal_senders=10
+      - -c
+      - max_replication_slots=10
+    stop_grace_period: 2s
+
+  db-activity-simulator:
+    build:
+      args:
+        HTTP_PROXY: ${http_proxy}
+        HTTPS_PROXY: ${https_proxy}
+      context: tests/docker/db-activity-simulator
+    restart: no
+    shm_size: 128mb
+    environment:
+      DSN_CHECK_DB: "postgresql://postgres:pass@pg16:5432/postgres"
+      DSN_ACTIVITY_SIMULATOR: "postgresql://postgres:pass@pg16:5432/sample_1"
+    stop_grace_period: 1s
+    stop_signal: SIGKILL
+    # We don't want `pg16` to be stopped
+    #    depends_on:
+    #      - pg16
+
+  popyka:
+    build:
+      args:
+        HTTP_PROXY: ${http_proxy}
+        HTTPS_PROXY: ${https_proxy}
+      context: .
+    restart: no
+    shm_size: 128mb
+    depends_on:
+      - db-activity-simulator
+    environment:
+      POPYKA_DB_DSN: "postgresql://postgres:pass@pg16:5432/sample_1"
+      POPYKA_KAFKA_CONF_DICT: '{"bootstrap.servers": "kafka:9092","client.id": "popyka-client"}'
+    stop_grace_period: 1s
+    stop_signal: SIGKILL
 
   kafka:
     image: 'bitnami/kafka:3.5'
