Fix db/user used for testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,8 +131,7 @@ services:
     restart: no
     shm_size: 128mb
     environment:
-      DSN_CHECK_DB: "postgresql://postgres:pass@pg16:5432/postgres"
-      DSN_ACTIVITY_SIMULATOR: "postgresql://postgres:pass@pg16:5432/sample_1"
+      DSN_ACTIVITY_SIMULATOR: "postgresql://postgres:pass@pg16:5432/popyka_test"
     stop_grace_period: 1s
     stop_signal: SIGKILL
     # We don't want `pg16` to be stopped
@@ -150,7 +149,7 @@ services:
     depends_on:
       - db-activity-simulator
     environment:
-      POPYKA_DB_DSN: "postgresql://postgres:pass@pg16:5432/sample_1"
+      POPYKA_DB_DSN: "postgresql://postgres:pass@pg16:5432/popyka_test"
       POPYKA_KAFKA_CONF_DICT: '{"bootstrap.servers": "kafka:9092","client.id": "popyka-client"}'
     stop_grace_period: 1s
     stop_signal: SIGKILL
