--- a/samples/django-admin/requirements.txt
+++ b/samples/django-admin/requirements.txt
@@ -10,6 +10,8 @@ confluent-kafka==2.3.0
     # via -r requirements.in
 django==5.0.4
     # via -r requirements.in
+django-environ==0.11.2
+    # via -r requirements.in
 psycopg2-binary==2.9.9
     # via -r requirements.in
 sqlparse==0.4.4
