--- a/reqs/requirements-prod.txt
+++ b/reqs/requirements-prod.txt
@@ -8,3 +8,5 @@ confluent-kafka==2.3.0
     # via -r reqs/requirements-prod.in
 psycopg2-binary==2.9.9
     # via -r reqs/requirements-prod.in
+pyyaml==6.0.1
+    # via -r reqs/requirements-prod.in
