Add env variable to verify expected postgresql version

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,12 @@ commands =
 set_env =
     EXPLORATION_TEST=1
     py{310,311,312}-pg{12}: OVERRIDE_PORT=54012
+    py{310,311,312}-pg{12}: EXPECTED_POSTGRESQL_MAJOR_VERSION=12
     py{310,311,312}-pg{13}: OVERRIDE_PORT=54013
+    py{310,311,312}-pg{13}: EXPECTED_POSTGRESQL_MAJOR_VERSION=13
     py{310,311,312}-pg{14}: OVERRIDE_PORT=54014
+    py{310,311,312}-pg{14}: EXPECTED_POSTGRESQL_MAJOR_VERSION=14
     py{310,311,312}-pg{15}: OVERRIDE_PORT=54015
+    py{310,311,312}-pg{15}: EXPECTED_POSTGRESQL_MAJOR_VERSION=15
     py{310,311,312}-pg{16}: OVERRIDE_PORT=54016
+    py{310,311,312}-pg{16}: EXPECTED_POSTGRESQL_MAJOR_VERSION=16
