--- a/popyka/popyka-default.yaml
+++ b/popyka/popyka-default.yaml
@@ -1,5 +1,6 @@
 # FIXME: use interpolation from env
 # FIXME: create a better default (so far, this is replication default config of PoC)
+# FIXME: relax controls, make possible to not define empty configurations like `config: {}` or `filters: []`
 database:
     connect_url: "postgresql://postgres:pass@localhost:54016/popyka_test"  # FIXME: ${POPYKA_DB_DSN}
     slot_name: "popyka_test"
