--- a/popyka/popyka-default.yaml
+++ b/popyka/popyka-default.yaml
@@ -1,9 +1,18 @@
-# FIXME: use interpolation from env
-# FIXME: create a better default (so far, this is replication default config of PoC)
-# FIXME: relax controls, make possible to not define empty configurations like `config: {}` or `filters: []`
+#
+# Default configuration for Popyka (optimized for quick start or demo purposes, insecure for production)
+#
+# Required env variables
+# - POPYKA_DB_DSN: DSN to connect to PostgreSql (libpq format)
+# - POPYKA_KAFKA_BOOTSTRAP_SERVERS: Kafka bootstrap servers
+#
+# Optional env variables:
+# - POPYKA_DB_SLOT_NAME
+# - POPYKA_KAFKA_TOPIC
+# - POPYKA_KAFKA_CLIENT_ID
+#
 database:
-    connect_url: "postgresql://postgres:pass@localhost:54016/popyka_test"  # FIXME: ${POPYKA_DB_DSN}
-    slot_name: "popyka_test"
+    connect_url: "${POPYKA_DB_DSN}"
+    slot_name: "${POPYKA_DB_SLOT_NAME:-popyka}"
 filters:
     - class: popyka.builtin.filters.IgnoreTxFilter
       config: {}
@@ -14,7 +23,10 @@ processors:
     - class: popyka.builtin.processors.ProduceToKafkaProcessor
       filters: []
       config:
-        topic: "popyka_test"
+        topic: "${POPYKA_KAFKA_TOPIC:-popyka}"
         producer_config:
-        - "bootstrap.servers": "localhost:9094"
-        - "client.id": "popyka-client"
+        - "bootstrap.servers": "${POPYKA_KAFKA_BOOTSTRAP_SERVERS}"
+        - "client.id": "${POPYKA_KAFKA_CLIENT_ID:-popyka-client}"
+
+# FIXME: create a better default (so far, this is replication default config of PoC)
+# FIXME: relax controls, make possible to not define empty configurations like `config: {}` or `filters: []`
