--- a/popyka/popyka-default.yaml
+++ b/popyka/popyka-default.yaml
@@ -25,7 +25,7 @@ processors:
       config:
         topic: "${POPYKA_KAFKA_TOPIC:-popyka}"
         producer_config:
-        - "bootstrap.servers": "${POPYKA_KAFKA_BOOTSTRAP_SERVERS}"
-        - "client.id": "${POPYKA_KAFKA_CLIENT_ID:-popyka-client}"
+          "bootstrap.servers": "${POPYKA_KAFKA_BOOTSTRAP_SERVERS}"
+          "client.id": "${POPYKA_KAFKA_CLIENT_ID:-popyka-client}"
 
 # FIXME: relax controls, make possible to not define empty configurations like `config: {}` or `filters: []`
