--- a/reqs/requirements-dev.txt
+++ b/reqs/requirements-dev.txt
@@ -8,6 +8,8 @@ anyio==4.3.0
     # via httpx
 asttokens==2.4.1
     # via stack-data
+attrs==23.2.0
+    # via pytest-docker
 backports-tarfile==1.0.0
     # via jaraco-context
 black==24.3.0
@@ -136,6 +138,10 @@ pygments==2.17.2
     #   ipython
     #   rich
 pytest==8.1.1
+    # via
+    #   -r reqs/requirements-dev.in
+    #   pytest-docker
+pytest-docker==3.1.1
     # via -r reqs/requirements-dev.in
 pyyaml==6.0.1
     # via
