--- a/reqs/requirements-dev.txt
+++ b/reqs/requirements-dev.txt
@@ -47,6 +47,8 @@ hatch==1.9.4
     # via -r reqs/requirements-dev.in
 hatchling==1.21.1
     # via hatch
+html5lib==1.1
+    # via mechanize
 httpcore==1.0.5
     # via httpx
 httpx==0.27.0
@@ -90,6 +92,8 @@ matplotlib-inline==0.1.6
     # via ipython
 mdurl==0.1.2
     # via markdown-it-py
+mechanize==0.4.9
+    # via -r reqs/requirements-dev.in
 more-itertools==10.2.0
     # via
     #   jaraco-classes
@@ -154,7 +158,9 @@ secretstorage==3.3.3
 shellingham==1.5.4
     # via hatch
 six==1.16.0
-    # via asttokens
+    # via
+    #   asttokens
+    #   html5lib
 sniffio==1.3.1
     # via
     #   anyio
@@ -181,6 +187,8 @@ virtualenv==20.25.1
     #   pre-commit
 wcwidth==0.2.13
     # via prompt-toolkit
+webencodings==0.5.1
+    # via html5lib
 zipp==3.18.1
     # via importlib-metadata
 zstandard==0.22.0
