--- a/samples/django-admin/docker-compose.yml
+++ b/samples/django-admin/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     environment:
       POPYKA_DB_DSN: "postgresql://postgres:pass@demo-db:5432/postgres"
       POPYKA_KAFKA_BOOTSTRAP_SERVERS: 'demo-kafka:9092'
+      POPYKA_DB_SLOT_NAME: "${POPYKA_DB_SLOT_NAME:-popyka}"
     stop_grace_period: 1s
     stop_signal: SIGKILL
 
