Add comment to docker compose file

--- a/samples/django-admin/docker-compose.yml
+++ b/samples/django-admin/docker-compose.yml
@@ -49,8 +49,8 @@ services:
     environment:
       POPYKA_DB_DSN: "postgresql://postgres:pass@demo-db:5432/postgres"
       POPYKA_KAFKA_BOOTSTRAP_SERVERS: 'demo-kafka:9092'
-      POPYKA_DB_SLOT_NAME: "${POPYKA_DB_SLOT_NAME:-popyka}"
-      POPYKA_KAFKA_TOPIC: "${POPYKA_KAFKA_TOPIC:-popyka}"
+      POPYKA_DB_SLOT_NAME: "${POPYKA_DB_SLOT_NAME:-popyka}"  # customized by system tests
+      POPYKA_KAFKA_TOPIC: "${POPYKA_KAFKA_TOPIC:-popyka}"  # customized by system tests
     stop_grace_period: 1s
     stop_signal: SIGKILL
 
