--- a/reqs/requirements-dev.txt
+++ b/reqs/requirements-dev.txt
@@ -27,6 +27,8 @@ click==8.1.7
     #   black
     #   hatch
     #   userpath
+coverage==7.4.4
+    # via -r reqs/requirements-dev.in
 cryptography==42.0.5
     # via secretstorage
 decorator==5.1.1
