Update tox config. Add docstring to Makefile

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands =
     pytest {tty:--color=yes} {posargs}
 set_env =
     EXPLORATION_TEST=1
+    CONTRACT_TEST=1
     py{310,311,312}-pg{12}: OVERRIDE_PORT=54012
     py{310,311,312}-pg{12}: EXPECTED_POSTGRESQL_MAJOR_VERSION=12
     py{310,311,312}-pg{13}: OVERRIDE_PORT=54013
