--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,6 +169,7 @@ services:
     depends_on:
       - db-activity-simulator
     environment:
+      POPYKA_CONFIG: "${POPYKA_CONFIG:-}"
       POPYKA_DB_DSN: "postgresql://postgres:pass@pg16:5432/popyka_test"
       POPYKA_KAFKA_CONF_DICT: '{"bootstrap.servers": "kafka:9092","client.id": "popyka-client"}'
     stop_grace_period: 1s
