--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ release:
     - buildah images
     - buildah build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
     - buildah images
-    # - buildah push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
+    - buildah push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
   rules:
     - if: $CI_COMMIT_TAG
     # - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
