--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,13 +28,7 @@ lint:
 test:
   stage: test
   script:
-    - pytest \
-        --cov=popyka/ \
-        --cov-report term \
-        --cov-report html \
-        --cov-report xml:coverage.xml \
-        --cov-branch \
-        tests/unit_tests/
+    - pytest --cov=popyka/ --cov-report term --cov-report html --cov-report xml:coverage.xml --cov-branch tests/unit_tests/
   artifacts:
     reports:
       coverage_report:
