--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,17 @@ lint:
   script:
     - pre-commit run -a
   cache:
-    key:
-      prefix: py312
-    paths:
-      - .cache/pip
-      - .cache/pre-commit
+    - key:
+        files:
+          - reqs/requirements-dev.txt
+          - reqs/requirements-prod.txt
+      paths:
+        - .cache/pip
+    - key:
+        files:
+          - .pre-commit-config.yaml
+      paths:
+        - .cache/pre-commit
   rules:  # temporary
     - when: never
 
@@ -124,11 +130,17 @@ unit-test:
         coverage_format: cobertura
         path: coverage.xml
   cache:
-    key:
-      prefix: py312
-    paths:
-      - .cache/pip
-      - .cache/pre-commit
+    - key:
+        files:
+          - reqs/requirements-dev.txt
+          - reqs/requirements-prod.txt
+      paths:
+        - .cache/pip
+    - key:
+        files:
+          - .pre-commit-config.yaml
+      paths:
+        - .cache/pre-commit
   rules:  # temporary
     - when: never
 
@@ -139,7 +151,6 @@ functional-test-py310-pg12:
     - name: $CI_POSTGRES12
       alias: ci-postgres12
       command: ["-c", "wal_level=logical", "-c", "max_wal_senders=10", "-c", "max_replication_slots=10"]
-
   variables:
     # GitLab
     FF_NETWORK_PER_BUILD: "1"  # allow service containers to reach each other
@@ -159,11 +170,19 @@ functional-test-py310-pg12:
   script:
     - pytest -v tests/functional_tests/
   cache:
-    key:
-      prefix: py310
-    paths:
-      - .cache/pip
-      - .cache/pre-commit
+    - key:
+        files:
+          - reqs/requirements-dev.txt
+          - reqs/requirements-prod.txt
+        prefix: py310
+      paths:
+        - .cache/pip
+    - key:
+        files:
+          - .pre-commit-config.yaml
+        prefix: py310
+      paths:
+        - .cache/pre-commit
 
 functional-test-py312-pg16:
   image: python:3.12
@@ -172,7 +191,6 @@ functional-test-py312-pg16:
     - name: $CI_POSTGRES16
       alias: ci-postgres16
       command: ["-c", "wal_level=logical", "-c", "max_wal_senders=10", "-c", "max_replication_slots=10"]
-
   variables:
     # GitLab
     FF_NETWORK_PER_BUILD: "1"  # allow service containers to reach each other
@@ -192,11 +210,17 @@ functional-test-py312-pg16:
   script:
     - pytest -v tests/functional_tests/
   cache:
-    key:
-      prefix: py312
-    paths:
-      - .cache/pip
-      - .cache/pre-commit
+    - key:
+        files:
+          - reqs/requirements-dev.txt
+          - reqs/requirements-prod.txt
+      paths:
+        - .cache/pip
+    - key:
+        files:
+          - .pre-commit-config.yaml
+      paths:
+        - .cache/pre-commit
 
 release:
   stage: release
