--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,9 @@ variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
   PRE_COMMIT_HOME: "$CI_PROJECT_DIR/.cache/pre-commit"
   CI_POSTGRES12: "${CI_REGISTRY_IMAGE}:ci-postgres12-v1"
-  CI_POSTGRES13: "${CI_REGISTRY_IMAGE}:ci-postgres13-v1"
-  CI_POSTGRES14: "${CI_REGISTRY_IMAGE}:ci-postgres14-v1"
-  CI_POSTGRES15: "${CI_REGISTRY_IMAGE}:ci-postgres15-v1"
+  #CI_POSTGRES13: "${CI_REGISTRY_IMAGE}:ci-postgres13-v1"
+  #CI_POSTGRES14: "${CI_REGISTRY_IMAGE}:ci-postgres14-v1"
+  #CI_POSTGRES15: "${CI_REGISTRY_IMAGE}:ci-postgres15-v1"
   CI_POSTGRES16: "${CI_REGISTRY_IMAGE}:ci-postgres16-v1"
 
 stages: [lint, unit-test, build, functional-test, release]
@@ -52,50 +52,50 @@ build-ci-pg12:
   rules:
     - if: $CI_COMMIT_BRANCH == 'ci-postgres-images'
 
-build-ci-pg13:
-  stage: build
-  image: quay.io/buildah/stable
-  variables:
-    STORAGE_DRIVER: vfs
-    BUILDAH_FORMAT: docker
-  before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | buildah login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
-  script:
-    - buildah pull $CI_POSTGRES13 || touch .need-ci-postgres13
-    - test -e .need-ci-postgres13 && buildah build -t $CI_POSTGRES13 -f postgres13-wal2json/Dockerfile tests/docker || true
-    - test -e .need-ci-postgres13 && buildah push     $CI_POSTGRES13                                                || true
-  rules:
-    - if: $CI_COMMIT_BRANCH == 'ci-postgres-images'
-
-build-ci-pg14:
-  stage: build
-  image: quay.io/buildah/stable
-  variables:
-    STORAGE_DRIVER: vfs
-    BUILDAH_FORMAT: docker
-  before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | buildah login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
-  script:
-    - buildah pull $CI_POSTGRES14 || touch .need-ci-postgres14
-    - test -e .need-ci-postgres14 && buildah build -t $CI_POSTGRES14 -f postgres14-wal2json/Dockerfile tests/docker || true
-    - test -e .need-ci-postgres14 && buildah push     $CI_POSTGRES14                                                || true
-  rules:
-    - if: $CI_COMMIT_BRANCH == 'ci-postgres-images'
-
-build-ci-pg15:
-  stage: build
-  image: quay.io/buildah/stable
-  variables:
-    STORAGE_DRIVER: vfs
-    BUILDAH_FORMAT: docker
-  before_script:
-    - echo "$CI_REGISTRY_PASSWORD" | buildah login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
-  script:
-    - buildah pull $CI_POSTGRES15 || touch .need-ci-postgres15
-    - test -e .need-ci-postgres15 && buildah build -t $CI_POSTGRES15 -f postgres15-wal2json/Dockerfile tests/docker || true
-    - test -e .need-ci-postgres15 && buildah push     $CI_POSTGRES15                                                || true
-  rules:
-    - if: $CI_COMMIT_BRANCH == 'ci-postgres-images'
+#build-ci-pg13:
+#  stage: build
+#  image: quay.io/buildah/stable
+#  variables:
+#    STORAGE_DRIVER: vfs
+#    BUILDAH_FORMAT: docker
+#  before_script:
+#    - echo "$CI_REGISTRY_PASSWORD" | buildah login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+#  script:
+#    - buildah pull $CI_POSTGRES13 || touch .need-ci-postgres13
+#    - test -e .need-ci-postgres13 && buildah build -t $CI_POSTGRES13 -f postgres13-wal2json/Dockerfile tests/docker || true
+#    - test -e .need-ci-postgres13 && buildah push     $CI_POSTGRES13                                                || true
+#  rules:
+#    - if: $CI_COMMIT_BRANCH == 'ci-postgres-images'
+#
+#build-ci-pg14:
+#  stage: build
+#  image: quay.io/buildah/stable
+#  variables:
+#    STORAGE_DRIVER: vfs
+#    BUILDAH_FORMAT: docker
+#  before_script:
+#    - echo "$CI_REGISTRY_PASSWORD" | buildah login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+#  script:
+#    - buildah pull $CI_POSTGRES14 || touch .need-ci-postgres14
+#    - test -e .need-ci-postgres14 && buildah build -t $CI_POSTGRES14 -f postgres14-wal2json/Dockerfile tests/docker || true
+#    - test -e .need-ci-postgres14 && buildah push     $CI_POSTGRES14                                                || true
+#  rules:
+#    - if: $CI_COMMIT_BRANCH == 'ci-postgres-images'
+#
+#build-ci-pg15:
+#  stage: build
+#  image: quay.io/buildah/stable
+#  variables:
+#    STORAGE_DRIVER: vfs
+#    BUILDAH_FORMAT: docker
+#  before_script:
+#    - echo "$CI_REGISTRY_PASSWORD" | buildah login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+#  script:
+#    - buildah pull $CI_POSTGRES15 || touch .need-ci-postgres15
+#    - test -e .need-ci-postgres15 && buildah build -t $CI_POSTGRES15 -f postgres15-wal2json/Dockerfile tests/docker || true
+#    - test -e .need-ci-postgres15 && buildah push     $CI_POSTGRES15                                                || true
+#  rules:
+#    - if: $CI_COMMIT_BRANCH == 'ci-postgres-images'
 
 build-ci-pg16:
   stage: build
